add_subdirectory(pdsp)
add_subdirectory(pdhd)
add_subdirectory(iceberg)
add_subdirectory(dune10kt-1x2x2)
add_subdirectory(dune10kt-1x2x6)
add_subdirectory(dune-vd)
add_subdirectory(dune-vd-coldbox)
add_subdirectory(protodunevd)
add_subdirectory(dunevd-crp2)
add_subdirectory(ui)
add_subdirectory(common)

install_fhicl()
